# DoiP_Tester

./: README.md  buglist.lst
AppsDepolyment/: default.desktop  deploy.appimage.sh
PlatformTester/: CMakeLists.txt  LICENSE  PlatformTester.c  PlatformTester.h  build.sh  main.c  oe-logs  oe-workdir
PlatformTester/ServerTestEnv/: server.c
PlatformTester/UTest/: UTest.c  UTest.h
PlatformTester/UTest/UTLs/: common.h
PlatformTester_OOP/: ApplicationManagement.cpp  CMakeLists.txt  PlatformLogger.h  PlatformTester.cpp  PlatformTester.h  build.sh  errors_definitions.h  main.cpp  message.h  server_definitions.h
PlatformTester_OOP/ServerTestEnv/: server.c  server_RAM.c
PlatformTester_QT/PlatformTester_QT-BONUS/: ApplicationManagement.h  PlatformLogger.cpp  PlatformTester.cpp  PlatformTester_QT-BONUS.pro  TesterException.cpp  TesterException.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  uds_definitions.h
testers.bin/: platform_tester_cpp
